# supercut-judge-cascade

./: .gitignore  .pre-commit-config.yaml  .semgrepignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CREDITS.md  DESIGN.md  ETHICS.md  KNOWN_LIMITATIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml  static.yml
examples/: big_buck_bunny_demo.py  celeba_demo.py  synthetic_smoke.py
prompts/: judge_a.md  judge_b.md  judge_c.md
src/supercut_cascade/: __init__.py  arcface.py  cli.py  dedup.py  detect.py  exceptions.py  face_cluster.py  identity_filter.py  io.py  judge.py  prefilter_cv.py  qa.py  select.py  windows.py
tests/: conftest.py  test_arcface.py  test_cli.py  test_dedup.py  test_detect.py  test_identity_filter.py  test_judge.py  test_qa.py  test_select.py  test_windows.py
