[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supercut-judge-cascade"
version = "0.1.0"
description = "Vision-LLM 3-stage judge cascade + ArcFace identity gating for video supercut generation"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "hinanohart" }]
keywords = [
    "video", "supercut", "vision-llm", "arcface", "scene-detection",
    "face-recognition", "ffmpeg", "judge-cascade", "claude", "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=10",
    "opencv-python>=4.8",
    "click>=8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
arcface = ["insightface>=0.7", "onnxruntime>=1.16"]
detect = ["scenedetect>=0.6"]
phash = ["imagehash>=4.3"]
cluster = ["scikit-learn>=1.3"]
vision = ["litellm>=1.40"]
all = ["supercut-judge-cascade[arcface,detect,phash,cluster,vision]"]
dev = ["pytest>=7", "pytest-cov", "pytest-mock", "ruff>=0.4", "hypothesis>=6"]

[project.scripts]
supercut-cascade = "supercut_cascade.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/supercut_cascade"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "gpu: marks tests that require a GPU",
    "network: marks tests that require network access",
]
